corrected repository errors

--- a/DmytroBesh/home-assignment-1/3-palindrome.html
+++ b/DmytroBesh/home-assignment-1/3-palindrome.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-	<script type='text/javascript' src='/2-calculator.js'></script>
+		<title>Document</title>
+		<script type='text/javascript' src='/3-pallindrom.js' defer></script>
 </head>
 <body>
+    
+	<script>
 
+	  
+	  </script>
 
 
 </body>
