--- a/lesson6-BOM-DOM/index.html
+++ b/lesson6-BOM-DOM/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul id='list'>
+        <li>test 1</li>
+    </ul>
 <script src="app.js">
 </script>
 </body>
