--- a/mariia_abramova/dz6/index.html
+++ b/mariia_abramova/dz6/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-     
+    <script defer src ="task1.js"></script>
 </head>
 <body>
-        <script src ="task1.js"></script>
+    <div>
+       <span>Browser name: </span><span>BROWSERNAME</span>
+    </div>
 </body>
 </html>
