--- a/mariia_abramova/dz7/task1.html
+++ b/mariia_abramova/dz7/task1.html
@@ -17,6 +17,6 @@
             </li>
         </ol>
     </div>
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
 </body>
 </html>
