--- a/Gora_VU/coursework/index.html
+++ b/Gora_VU/coursework/index.html
@@ -20,6 +20,7 @@
     <div id="done" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
   </div>
   <button id="toSt">Save</button>
+  <button id="send">Download from server</button>
   <script src="draganddrop.js"></script>
   <script src="app.js"></script>
 </body>
