--- a/Vladymyr_Kulinich/Trainings/Calculator/index.html
+++ b/Vladymyr_Kulinich/Trainings/Calculator/index.html
@@ -31,7 +31,7 @@
 <br>
 <input type="reset" value="Reset">
 <br>
-<br><input type="textfield" name="ans" value="" placeholder="Your result">cd
+<br><input type="textfield" name="answerField" value="" placeholder="Your result">
 </form>
 </body>
 </html>
