--- a/roman_karnaukhov/home_assignment_1/hs11.html
+++ b/roman_karnaukhov/home_assignment_1/hs11.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Угадай число</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <p>Угадай число</p>
+    <script src = "hs11app.js"></script>
+
 </body>
 </html>
