--- a/Chrednichenko/home_assignment1/Task 2 v2/index.html
+++ b/Chrednichenko/home_assignment1/Task 2 v2/index.html
@@ -11,7 +11,15 @@
   </head>
   <body>
     <div class="box">
-      <form name="form"><input class="text" name="text" value="0" /></form>
+      <p>Число 1: <input type="text" id="n1"></p>
+      <p>Число 2: <input type="text" id="n2"></p>
+      <button onclick="plus()">Сложить</button>
+      <button onclick="minus()">Вычесть</button>
+      <button onclick="multiply()">Умножить</button>
+      <button onclick="divide()">Поделить</button>
+      <hr/>
+      <h4>Результат:</h3>
+      <p id="out"></p>
     </div>
   </body>
 </html>
