home task 3done

--- a/roman_karnaukhov/home_assignment_3/hs33.html
+++ b/roman_karnaukhov/home_assignment_3/hs33.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src = "hs32app.js"></script>
-    <title>FunctionApplying</title>
+    <script src = "hs33app.js"></script>
+    <title>call/apply/bind</title>
 </head>
 <body>
-    <p>FunctionApplying</p>
+    <p>call/apply/bind</p>
 </body>
 </html>
