--- a/lesson6-BOM-DOM/index.html
+++ b/lesson6-BOM-DOM/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="test"><span id="test_span"></span>Text</div>
     <ul id='list'>
+        Text node example
         <li>test 1</li>
+        <li>test 2</li>
     </ul>
 <script src="app.js">
 </script>
