--- a/lesson7-Document-ELements/index.html
+++ b/lesson7-Document-ELements/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <ul id='list'>
+    <ul id='list' name="list">
+        <li>test 1</li>
+        <li class="outer">test 2</li>
+    </ul>
+    <ul id='list-2' class="myClass">
         <li>test 1</li>
     </ul>
-    <ul id='list-2'>
-        <li>test 1</li>
-    </ul>
+    <input type="text" />
 <script src="app.js">
 </script>
 </body>
