--- a/ievgenii_vorobiov/hw6/iv_home_assignment6.html
+++ b/ievgenii_vorobiov/hw6/iv_home_assignment6.html
@@ -14,5 +14,8 @@
 		<span>Browser name: </span><span>BROWSERNAME</span>
 	</div>
 </body>
+<script>
+	document.getElementsByTagName('span')[1].innerHTML = navigator.userAgent
+</script>
 
 </html>
