Home assignment update

--- a/Vladymyr_Kulinich/Home_assignment_6/index6_2.html
+++ b/Vladymyr_Kulinich/Home_assignment_6/index6_2.html
@@ -13,7 +13,7 @@
   </body>
   <script>
     // Как получить доступ к стилям последнего элемента тега body?
-      var last = document.querySelectorAll("p").lastElementChild;
+      var last = document.querySelectorAll("p").lastElementChild.style;
     // Как проверить что в body вообще есть элементы?
     var elem = document.querySelectorAll("body");
     console.log(elem);
