--- a/yurij_sorokin/homeassignment5/task2/page.html
+++ b/yurij_sorokin/homeassignment5/task2/page.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="counter.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
