--- a/lesson8-Events/index.html
+++ b/lesson8-Events/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="menu">
-        <a href="http://google.com"><button onclick="event.target.innerHTML = 'Hello ITEA';" data-action="save" class="btn btn-md btn-warning">Сохранить</button></a>
+        <a href="javascript:void(0);"><button onclick="event.target.innerHTML = 'Hello ITEA';" data-action="save" class="btn btn-md btn-warning">Сохранить</button></a>
         <button data-action="load" class="btn btn-md btn-info">Загрузить</button>
         <button data-action="search" class="btn btn-md btn-primary">Поиск</button>
     </div>
