--- a/home_assignment8.html
+++ b/home_assignment8.html
@@ -28,7 +28,7 @@
             var newItem = todoItemTemplate.cloneNode(true);
             newItem.firstChild.textContent = input.value;
             // добавить новый элемент в todo-list 
-            // ... ваш код тут
+            todoItemTemplate.appendChild(newItem);
             input.value = '';
         }
         
@@ -36,7 +36,7 @@
             // используя переданный объект Event
             // удалить весь тег li который является родительским 
             // для кнопки на которой выполнили клик
-            // ... ваш код тут
+            e.target.parentNode.remove();
         }
     </script>
     <style>
