--- a/yurij_sorokin/test/page.html
+++ b/yurij_sorokin/test/page.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+        <div>
+            <input id="todo-input" value="" /> <button id="button-add" onclick="addItem()">Add</button>
+            <p>ToDo List:</p>
+            <ol id="todo-list">
+                <li class="todo-item">
+                    First todo
+                    <span class="delete-button" onclick="removeItem(event)" title="Delete current item">x</span>
+                </li>
+            </ol>
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
