--- a/home_assignment8.html
+++ b/home_assignment8.html
@@ -27,14 +27,16 @@
             var input = document.getElementById('todo-input');
             var newItem = todoItemTemplate.cloneNode(true);
             newItem.firstChild.textContent = input.value;
-            // добавить новый элемент в todo-list 
+            // добавить новый элемент в todo-list
+            // ... ваш код тут
             input.value = '';
         }
-        
+
         function removeItem(e) {
             // используя переданный объект Event
-            // удалить весь тег li который является родительским 
+            // удалить весь тег li который является родительским
             // для кнопки на которой выполнили клик
+            // ... ваш код тут
         }
     </script>
     <style>
